Fixed overflow issue

--- a/src/main/styles/App.css
+++ b/src/main/styles/App.css
@@ -5,6 +5,7 @@
 html, body {
   margin: 0;
   font-family: Verdana, sans-serif;
+  overflow-x: hidden;
 }
 
 /* latin */
@@ -914,7 +915,6 @@ html, body {
 
 .div__carousel3d-container {
   width: 100%;
-  overflow: visible;
   margin: 5em 0;
 }
 
@@ -948,12 +948,6 @@ html, body {
     width: 100px;
     height: 100%;
     border-radius: 5px;
-}
-
-.div__article-img-grid img {
-  width: auto;
-  margin: 2px;
-  border-radius: 3px;
 }
 
 .div__warning {
